css/views2.scss
/* EVENTS */

.events-preview {

	position: relative;
	margin-bottom: 2.5rem;

	&.has-image {

		.event-image {
			margin-bottom: 1rem;

			img {
				display: block;
			}
		}

		&.has-image-bottom {
			display: grid;
			gap: 0;

			.event-image {
				order: 2;
			}
		}

		@media screen and (min-width: 750px ) {

			&.has-image-right,
			&.has-image-left {
				display: grid;
				grid-template-columns: auto 1fr;
				gap: 1.5rem;
			}

			&.has-image-right {
				grid-template-columns: 1fr auto;

				.event-image {
					order: 2;
				}

				.event-content {
					order: 1;
				}
			}
		}
	}

	h2,
	h3 {
		margin: 0 0 0.5rem;
		font-size: 1.8rem;
		line-height: 1.2;
		text-wrap: balance;

		.event-listing-compact & {
			font-size: 1.2rem;
		}

		> a,
		> a > span {
			display: block;
		}

		.entry-title {
			padding: 0;
		}

		.event-date-time {
			font-weight: 600;
		}
	}

	.more-info-buttons {
		--sqcdy-button-padding-inline: 0.5rem;
		--sqcdy-button-padding-block: 0.25rem;
	}

	.short-description {
		font-size: 0.9rem;
	}

	.venue,
	.short-description,
	.more-info-buttons,
	.event-image-bottom {
		margin-block: 0.75rem;
		margin-left: var(--sqcdy-events-preview-indent, 3rem);

		.event-listing-compact & {
			margin-left: 0;
		}
	}

	.event-image-bottom {
		margin-block: 0;
	}

}


// Single Event
.events-full {

	h1.event-date-title {
		margin: 0 0 1rem;
		font-size: var(--sqcdy-recordings-title-font-size, var(--sqcdy-font-size-xl));

		> span {
			display: block;
		}
	}

	.more-info-buttons {
		margin-block: 1rem;
	}

	.featuredwork,
	.event-description {
		margin-top: 1rem;
		padding-top: 1rem;
		border-top: 1px solid #aaa;
	}

	.event-image-top {
		margin-bottom: 1rem;
	}

	.event-image-middle {
		margin-block: 1rem;
	}

	.event-image-bottom {
		margin-top: 1rem;
	}
}

.more-events {
	text-align: center;
}

// both single and preview
article.type-event {

	a.button-map {
		--sqcdy-button-padding-inline: 0.25rem;
		--sqcdy-button-padding-block: 0.25rem;
		--sqcdy-button-border-color: transparent;
		margin-block: 0;
		margin-right: 0;
		margin-left: 0.5rem;
		font-size: 75%;
	}
}

h2.accordion-header {
	margin: 1.5rem 0;
	padding: 0.75rem 1.5rem;
	color: #fff;
	font-size: 2rem;
	line-height: 1;
	background: var(--sqcdy-events-accordion-bg, #555);
	cursor: pointer;

	&:focus-visible {
		outline: 2px solid currentColor;
		outline-offset: 2px;
	}
}

.js .accordion-content {
	display: none;
}

a.button.button-events-more-info {

	i,
	svg {
		min-width: 0.75em;
		margin-right: 0.5em;
	}
}

.squarecandy-add-to-calendar {
	display: flex;
	flex-wrap: wrap;
	gap: 0.25rem 0.75rem;
	font-size: 0.8em;

	*,
	a {
		color: var(--sqcdy-events-add-to-calendar-color, #666);
	}

	a {
		text-decoration: underline;
	}

	@media screen and (max-width: 414px ) {

		.add-to-calendar-label {
			display: block;
			width: 100%;
		}
	}
}

.featuredwork span.label {
	margin-right: 0.5em;
	color: var(--sqcdy-events-featured-work-label-color, var(--sqcdy-color-gray, #777));
	font-size: var(--sqcdy-events-featured-work-label-size, 0.8em);
	text-transform: var(--sqcdy-events-featured-work-label-text-transform, uppercase);
}

